Designed 'Fixed Scrollbars and Added JWT secret

--- a/twitter-clone/styles/globals.css
+++ b/twitter-clone/styles/globals.css
@@ -4,7 +4,7 @@
 
 @layer base{
     body{
-        @apply bg-black;
+        @apply bg-black scrollbar-hide;
     }
 }
 
